--- a/apiserver/.env
+++ b/apiserver/.env
@@ -13,3 +13,7 @@ RABBITMQ_PORT=5672
 RABBITMQ_USERNAME=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_VIRTUAL_HOST=/
+
+CELERY_BROKER_URL=amqp://guest:guest@localhost:5672/
+# CELERY_RESULT_BACKEND=db+postgresql://postgres:postgres@localhost:54322/socialmedia
+CELERY_RESULT_BACKEND=django-db
