--- a/apiserver/.env.example
+++ b/apiserver/.env.example
@@ -1,11 +1,19 @@
 DJANGO_SECRET_KEY=
 DJANGO_DEBUG=
+DJANGO_ALLOWED_HOSTS=
 
 JWT_SECRET_KEY=
 JWT_EXPIRATION_DELTA_SECONDS=
 JWT_ISSUSER=
 
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_PORT=
+
 AWS_DYNAMODB_LOCAL=
+AWS_REGION_NAME=
 
 RABBITMQ_SCHEME=
 RABBITMQ_HOST=
